added support for comparison

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+# requires = ["flit_core >=3.2,<4"]
+# build-backend = "flit_core.buildapi"
+requires = ["maturin>=1.2,<2.0"]
+build-backend = "maturin"
 
 [project]
 name = "openmc_mcnp_adapter"
@@ -40,3 +42,6 @@ Discussions = "https://openmc.discourse.org"
 
 [project.scripts]
 mcnp_to_openmc = "openmc_mcnp_adapter.openmc_conversion:mcnp_to_openmc"
+
+[tool.maturin]
+features = ["pyo3/extension-module"]
